--- a/DIG_last/index.html
+++ b/DIG_last/index.html
@@ -13,13 +13,11 @@
   <form action="" method="post" class="main-form">
     <div class="form-group">
       <div class="stocks-set">
-        <input type="text" name="stock1" value="" list="stocks-codes" placeholder="(例:7203)"> <br>
-        <input type="text" name="stock2" value="value_b"> <br>
+        <input type="text" class="symbol" value="" list="stocks-codes" placeholder="(例:7203)"> <br>
+        <input type="text" class="symbol" value="" list="stocks-codes"> <br>
+        <input type="text" class="symbol" value="" list="stocks-codes"> <br>
       </div>
-      <input type="text" name="name_a" value="value_a"> <br>
-      <input type="text" name="name_b" value="value_b"> <br>
-      <input type="text" name="name_c" value="value_c"> <br>
-      <input type="submit" value="送信">
+      <input type="button" value="グラフを表示" id="submit-button">
 
       <datalist id="stocks-codes">
       </datalist>
@@ -30,9 +28,11 @@
   <!-- Display Chart -->
   <div id="chart_div"></div>
   <!-- Load Scripts -->
+  <script type="text/javascript" src="javascript/globalVariable.js"></script>
   <script type="text/javascript" src="javascript/makeStocksDatalist.js"></script>
   <script type="text/javascript" src="javascript/load.js"></script>
   <script type="text/javascript" src="javascript/editData.js"></script>
+  <script type="text/javascript" src="javascript/event.js"></script>
   <script type="text/javascript" src="javascript/desplay.js"></script>
 </body>
 
