--- a/DIG_last/index.html
+++ b/DIG_last/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="asset-group row mt-3">
-        <div class="asset-row row">
+        <div class="row">
           <label class="form-label col-sm-2">銘柄(ティッカーコード)</label>
           <div class="symbol-box col-sm-3">
           </div>
@@ -88,7 +88,7 @@
             <span class="per-text">%</span>
           </div>
         </div>
-        <div class="asset-row per-sum row my-4 row-index-last">
+        <div class="per-sum row my-4 row-index-last">
           <label for="per-sum-text" class="form-label col-sm-2">Total</label>
           <div class="symbol-box col-sm-3">
           </div>
@@ -96,7 +96,6 @@
             <input type="text" class="per-sum-text" id="per-sum-text" value="" readonly>
             <span class="per-text">%(合計 100%にしてください)</span>
           </div>
-          <!-- <label class="col">(合計 100%にしてください)</label> -->
         </div>
       </div>
 
